fixed page width for better view on mobile devices

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,8 @@
+.fixed-wrapper {
+  min-width: 1920px;
+  margin: 0 auto;
+}
+
 .image-container {
   position: relative;
   border-bottom: 10px solid white;
